Finish converting chap. 11, fix refs

--- a/assets/bibliography.bib
+++ b/assets/bibliography.bib
@@ -31,6 +31,16 @@ year = {2007}
   url={http://stanford.edu/~ngoodman/papers/churchUAI08_rev2.pdf}
 }
 
+@article{Blei2003,
+  title={Latent dirichlet allocation},
+  author={Blei, David M and Ng, Andrew Y and Jordan, Michael I},
+  journal={Journal of machine Learning research},
+  volume={3},
+  number={Jan},
+  pages={993--1022},
+  year={2003}
+}
+
 @inproceedings{Ackerman2011,
   title={Noncomputable conditional distributions},
   author={Ackerman, Nathanael Leedom and Freer, Cameron E and Roy, Daniel M},
@@ -319,4 +329,15 @@ year = {2009},
 volume = {116},
 number = {4},
 pages = {661--716}
+}
+
+@article{Feldman2009,
+  title={The influence of categories on perception: explaining the perceptual magnet effect as optimal statistical inference.},
+  author={Feldman, Naomi H and Griffiths, Thomas L and Morgan, James L},
+  journal={Psychological review},
+  volume={116},
+  number={4},
+  pages={752},
+  year={2009},
+  publisher={American Psychological Association}
 }
