Fix a bunch of references

--- a/assets/bibliography.bib
+++ b/assets/bibliography.bib
@@ -1,3 +1,83 @@
+@book{Murphy2004,
+  title={The big book of concepts},
+  author={Murphy, Gregory},
+  year={2004},
+  publisher={MIT press}
+}
+
+@article{Smith1998,
+  title={Prototypes in the mist: The early epochs of category learning.},
+  author={Smith, J David and Minda, John Paul},
+  journal={Journal of Experimental Psychology: Learning, Memory, and Cognition},
+  volume={24},
+  number={6},
+  pages={1411},
+  year={1998},
+  publisher={American Psychological Association}
+}
+
+@article{Griffiths2007,
+  title={Unifying rational models of categorization via the hierarchical Dirichlet process},
+  author={Griffiths, T and Canini, K and Sanborn, A and Navarro, D},
+  year={2007},
+  publisher={Psychology Press}
+}
+
+@article{Teh2012,
+  title={Hierarchical dirichlet processes},
+  author={Teh, Yee Whye and Jordan, Michael I and Beal, Matthew J and Blei, David M},
+  journal={Journal of the american statistical association},
+  year={2012},
+  publisher={Taylor \& Francis}
+}
+
+@inproceedings{Blei2003b,
+  title={Hierarchical Topic Models and the Nested Chinese Restaurant Process},
+  author={Blei, David M and Griffiths, Thomas L and Jordan, Michael I and Tenenbaum, Joshua B},
+  booktitle={Advances in Neural Information Processing Systems},
+  volume={16},
+  pages={17--24},
+  publisher={The MIT Press},
+  year={2003}
+}
+
+@inproceedings{Shafto2006,
+  title={Learning cross-cutting systems of categories},
+  author={Shafto, Patrick and Kemp, Charles and Mansinghka, Vikash and Gordon, Matthew and Tenenbaum, Joshua B},
+  booktitle={Proceedings of the 28th annual conference of the Cognitive Science Society},
+  pages={2146--2151},
+  year={2006},
+  organization={Citeseer}
+}
+
+@inproceedings{Kemp2006,
+  title={Learning systems of concepts with an infinite relational model},
+  author={Kemp, Charles and Tenenbaum, Joshua B and Griffiths, Thomas L and Yamada, Takeshi and Ueda, Naonori},
+  booktitle={AAAI},
+  volume={3},
+  pages={5},
+  year={2006}
+}
+
+@article{Goldwater2009,
+  title={A Bayesian framework for word segmentation: Exploring the effects of context},
+  author={Goldwater, Sharon and Griffiths, Thomas L and Johnson, Mark},
+  journal={Cognition},
+  volume={112},
+  number={1},
+  pages={21--54},
+  year={2009},
+  publisher={Elsevier}
+}
+@article{Sethuraman1994,
+  title={A constructive definition of Dirichlet priors},
+  author={Sethuraman, Jayaram},
+  journal={Statistica sinica},
+  pages={639--650},
+  year={1994},
+  publisher={JSTOR}
+}
+
 @article{Goodman2008b,
 author = {Goodman, Noah D. and Tenenbaum, Joshua B. and Feldman, Jacob and Griffiths, Thomas L},
 title = {A rational analysis of rule-based concept learning},
