ch 3 is revised. woohoo.

--- a/assets/bibliography.bib
+++ b/assets/bibliography.bib
@@ -1,423 +1,404 @@
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
+
+
+%% Created for Noah Goodman at 2016-09-22 10:50:13 -0700 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+
+@book{Marr1982,
+	Author = {David Marr},
+	Date-Added = {2016-09-22 17:50:09 +0000},
+	Date-Modified = {2016-09-22 17:50:09 +0000},
+	Owner = {noah},
+	Pdf = {/Users/noah/Desktop/papers/Marr_Ch1.pdf},
+	Publisher = {Freeman Publishers},
+	Timestamp = {2006.01.23},
+	Title = {Vision},
+	Year = {1982}}
+
 @book{Murphy2004,
-  title={The big book of concepts},
-  author={Murphy, Gregory},
-  year={2004},
-  publisher={MIT press}
-}
+	Author = {Murphy, Gregory},
+	Publisher = {MIT press},
+	Title = {The big book of concepts},
+	Year = {2004}}
 
 @article{Smith1998,
-  title={Prototypes in the mist: The early epochs of category learning.},
-  author={Smith, J David and Minda, John Paul},
-  journal={Journal of Experimental Psychology: Learning, Memory, and Cognition},
-  volume={24},
-  number={6},
-  pages={1411},
-  year={1998},
-  publisher={American Psychological Association}
-}
+	Author = {Smith, J David and Minda, John Paul},
+	Journal = {Journal of Experimental Psychology: Learning, Memory, and Cognition},
+	Number = {6},
+	Pages = {1411},
+	Publisher = {American Psychological Association},
+	Title = {Prototypes in the mist: The early epochs of category learning.},
+	Volume = {24},
+	Year = {1998}}
 
 @article{Griffiths2007,
-  title={Unifying rational models of categorization via the hierarchical Dirichlet process},
-  author={Griffiths, T and Canini, K and Sanborn, A and Navarro, D},
-  year={2007},
-  publisher={Psychology Press}
-}
+	Author = {Griffiths, T and Canini, K and Sanborn, A and Navarro, D},
+	Publisher = {Psychology Press},
+	Title = {Unifying rational models of categorization via the hierarchical Dirichlet process},
+	Year = {2007}}
 
 @article{Teh2012,
-  title={Hierarchical dirichlet processes},
-  author={Teh, Yee Whye and Jordan, Michael I and Beal, Matthew J and Blei, David M},
-  journal={Journal of the american statistical association},
-  year={2012},
-  publisher={Taylor \& Francis}
-}
+	Author = {Teh, Yee Whye and Jordan, Michael I and Beal, Matthew J and Blei, David M},
+	Journal = {Journal of the american statistical association},
+	Publisher = {Taylor \& Francis},
+	Title = {Hierarchical dirichlet processes},
+	Year = {2012}}
 
 @inproceedings{Blei2003b,
-  title={Hierarchical Topic Models and the Nested Chinese Restaurant Process},
-  author={Blei, David M and Griffiths, Thomas L and Jordan, Michael I and Tenenbaum, Joshua B},
-  booktitle={Advances in Neural Information Processing Systems},
-  volume={16},
-  pages={17--24},
-  publisher={The MIT Press},
-  year={2003}
-}
+	Author = {Blei, David M and Griffiths, Thomas L and Jordan, Michael I and Tenenbaum, Joshua B},
+	Booktitle = {Advances in Neural Information Processing Systems},
+	Pages = {17--24},
+	Publisher = {The MIT Press},
+	Title = {Hierarchical Topic Models and the Nested Chinese Restaurant Process},
+	Volume = {16},
+	Year = {2003}}
 
 @inproceedings{Shafto2006,
-  title={Learning cross-cutting systems of categories},
-  author={Shafto, Patrick and Kemp, Charles and Mansinghka, Vikash and Gordon, Matthew and Tenenbaum, Joshua B},
-  booktitle={Proceedings of the 28th annual conference of the Cognitive Science Society},
-  pages={2146--2151},
-  year={2006},
-  organization={Citeseer}
-}
+	Author = {Shafto, Patrick and Kemp, Charles and Mansinghka, Vikash and Gordon, Matthew and Tenenbaum, Joshua B},
+	Booktitle = {Proceedings of the 28th annual conference of the Cognitive Science Society},
+	Organization = {Citeseer},
+	Pages = {2146--2151},
+	Title = {Learning cross-cutting systems of categories},
+	Year = {2006}}
 
 @inproceedings{Kemp2006,
-  title={Learning systems of concepts with an infinite relational model},
-  author={Kemp, Charles and Tenenbaum, Joshua B and Griffiths, Thomas L and Yamada, Takeshi and Ueda, Naonori},
-  booktitle={AAAI},
-  volume={3},
-  pages={5},
-  year={2006}
-}
+	Author = {Kemp, Charles and Tenenbaum, Joshua B and Griffiths, Thomas L and Yamada, Takeshi and Ueda, Naonori},
+	Booktitle = {AAAI},
+	Pages = {5},
+	Title = {Learning systems of concepts with an infinite relational model},
+	Volume = {3},
+	Year = {2006}}
 
 @article{Goldwater2009,
-  title={A Bayesian framework for word segmentation: Exploring the effects of context},
-  author={Goldwater, Sharon and Griffiths, Thomas L and Johnson, Mark},
-  journal={Cognition},
-  volume={112},
-  number={1},
-  pages={21--54},
-  year={2009},
-  publisher={Elsevier}
-}
+	Author = {Goldwater, Sharon and Griffiths, Thomas L and Johnson, Mark},
+	Journal = {Cognition},
+	Number = {1},
+	Pages = {21--54},
+	Publisher = {Elsevier},
+	Title = {A Bayesian framework for word segmentation: Exploring the effects of context},
+	Volume = {112},
+	Year = {2009}}
+
 @article{Sethuraman1994,
-  title={A constructive definition of Dirichlet priors},
-  author={Sethuraman, Jayaram},
-  journal={Statistica sinica},
-  pages={639--650},
-  year={1994},
-  publisher={JSTOR}
-}
+	Author = {Sethuraman, Jayaram},
+	Journal = {Statistica sinica},
+	Pages = {639--650},
+	Publisher = {JSTOR},
+	Title = {A constructive definition of Dirichlet priors},
+	Year = {1994}}
 
 @article{Goodman2008b,
-author = {Goodman, Noah D. and Tenenbaum, Joshua B. and Feldman, Jacob and Griffiths, Thomas L},
-title = {A rational analysis of rule-based concept learning},
-journal = {Cognitive Science},
-year = {2008}
-}
+	Author = {Goodman, Noah D. and Tenenbaum, Joshua B. and Feldman, Jacob and Griffiths, Thomas L},
+	Journal = {Cognitive Science},
+	Title = {A rational analysis of rule-based concept learning},
+	Year = {2008}}
 
 @article{Kemp2007,
-author = {Kemp, Charles and Perfors, Amy and Tenenbaum, Joshua B.},
-title = {Learning overhypotheses with hierarchical Bayesian models},
-journal = {Developmental Science},
-year = {2007}
-}
+	Author = {Kemp, Charles and Perfors, Amy and Tenenbaum, Joshua B.},
+	Journal = {Developmental Science},
+	Title = {Learning overhypotheses with hierarchical Bayesian models},
+	Year = {2007}}
 
 @article{Turing1937,
-  title={Computability and $\lambda$-definability},
-  author={Turing, Alan M},
-  journal={The Journal of Symbolic Logic},
-  volume={2},
-  number={4},
-  pages={153--163},
-  year={1937},
-  publisher={JSTOR}
-}
+	Author = {Turing, Alan M},
+	Journal = {The Journal of Symbolic Logic},
+	Number = {4},
+	Pages = {153--163},
+	Publisher = {JSTOR},
+	Title = {Computability and $\lambda$-definability},
+	Volume = {2},
+	Year = {1937}}
 
 @inproceedings{Goodman2008,
-  title={Church: a language for generative models},
-  author={Goodman, Noah and Mansinghka, Vikash and Roy, Daniel and Bonawitz, Keith and Tenenbaum, Joshua},
-  booktitle={UAI 2008},
-  year={2008},
-  url={http://stanford.edu/~ngoodman/papers/churchUAI08_rev2.pdf}
-}
+	Author = {Goodman, Noah and Mansinghka, Vikash and Roy, Daniel and Bonawitz, Keith and Tenenbaum, Joshua},
+	Booktitle = {UAI 2008},
+	Title = {Church: a language for generative models},
+	Url = {http://stanford.edu/~ngoodman/papers/churchUAI08_rev2.pdf},
+	Year = {2008},
+	Bdsk-Url-1 = {http://stanford.edu/~ngoodman/papers/churchUAI08_rev2.pdf}}
 
 @article{Blei2003,
-  title={Latent dirichlet allocation},
-  author={Blei, David M and Ng, Andrew Y and Jordan, Michael I},
-  journal={Journal of machine Learning research},
-  volume={3},
-  number={Jan},
-  pages={993--1022},
-  year={2003}
-}
+	Author = {Blei, David M and Ng, Andrew Y and Jordan, Michael I},
+	Journal = {Journal of machine Learning research},
+	Number = {Jan},
+	Pages = {993--1022},
+	Title = {Latent dirichlet allocation},
+	Volume = {3},
+	Year = {2003}}
 
 @inproceedings{Ackerman2011,
-  title={Noncomputable conditional distributions},
-  author={Ackerman, Nathanael Leedom and Freer, Cameron E and Roy, Daniel M},
-  booktitle={Logic in Computer Science (LICS), 2011 26th Annual IEEE Symposium on},
-  pages={107--116},
-  year={2011},
-  organization={IEEE}
-}
+	Author = {Ackerman, Nathanael Leedom and Freer, Cameron E and Roy, Daniel M},
+	Booktitle = {Logic in Computer Science (LICS), 2011 26th Annual IEEE Symposium on},
+	Organization = {IEEE},
+	Pages = {107--116},
+	Title = {Noncomputable conditional distributions},
+	Year = {2011}}
 
 @article{Mcallester2008,
-  title={Random-world semantics and syntactic independence for expressive languages},
-  author={McAllester, David and Milch, Brian and Goodman, Noah D},
-  year={2008},
-  url = {http://hdl.handle.net/1721.1/41516}
-}
+	Author = {McAllester, David and Milch, Brian and Goodman, Noah D},
+	Title = {Random-world semantics and syntactic independence for expressive languages},
+	Url = {http://hdl.handle.net/1721.1/41516},
+	Year = {2008},
+	Bdsk-Url-1 = {http://hdl.handle.net/1721.1/41516}}
 
 @inproceedings{Hamrick2011,
-  title={Internal physics models guide probabilistic judgments about object dynamics},
-  author={Hamrick, Jessica and Battaglia, Peter and Tenenbaum, Joshua B},
-  booktitle={Proceedings of the 33rd Annual Meeting of the Cognitive Science Society, Boston, MA},
-  year={2011},
-  url = {http://web.mit.edu/pbatt/www/publications/HamrBattTene11CogSci33.pdf}
-}
+	Author = {Hamrick, Jessica and Battaglia, Peter and Tenenbaum, Joshua B},
+	Booktitle = {Proceedings of the 33rd Annual Meeting of the Cognitive Science Society, Boston, MA},
+	Title = {Internal physics models guide probabilistic judgments about object dynamics},
+	Url = {http://web.mit.edu/pbatt/www/publications/HamrBattTene11CogSci33.pdf},
+	Year = {2011},
+	Bdsk-Url-1 = {http://web.mit.edu/pbatt/www/publications/HamrBattTene11CogSci33.pdf}}
 
 @inproceedings{Gerstenberg2012,
-  title={Ping pong in Church: Productive use of concepts in human probabilistic inference},
-  author={Gerstenberg, Tobias and Goodman, Noah D},
-  booktitle={Proceedings of the 34th Annual Conference of the Cognitive Science Society},
-  year={2012},
-  url = {http://www.stanford.edu/~ngoodman/papers/GerstenbergGoodman2012.pdf}
-}
+	Author = {Gerstenberg, Tobias and Goodman, Noah D},
+	Booktitle = {Proceedings of the 34th Annual Conference of the Cognitive Science Society},
+	Title = {Ping pong in Church: Productive use of concepts in human probabilistic inference},
+	Url = {http://www.stanford.edu/~ngoodman/papers/GerstenbergGoodman2012.pdf},
+	Year = {2012},
+	Bdsk-Url-1 = {http://www.stanford.edu/~ngoodman/papers/GerstenbergGoodman2012.pdf}}
 
 @article{Church1936,
-  title={An Unsolvable Problem of Elementary Number Theory},
-  author={Church, Alonzo},
-  journal={American Journal of Mathematics},
-  volume={58},
-  number={2},
-  pages={345--363},
-  publisher={The Johns Hopkins University Press},
-  year={1936}
-}
+	Author = {Church, Alonzo},
+	Journal = {American Journal of Mathematics},
+	Number = {2},
+	Pages = {345--363},
+	Publisher = {The Johns Hopkins University Press},
+	Title = {An Unsolvable Problem of Elementary Number Theory},
+	Volume = {58},
+	Year = {1936}}
 
 @article{Tversky1974,
-  title={Judgment under uncertainty: Heuristics and biases},
-  author={Tversky, Amos and Kahneman, Daniel},
-  journal={Science},
-  volume={185},
-  number={4157},
-  pages={1124--1131},
-  year={1974},
-  publisher={American Association for the Advancement of Science}
-}
+	Author = {Tversky, Amos and Kahneman, Daniel},
+	Journal = {Science},
+	Number = {4157},
+	Pages = {1124--1131},
+	Publisher = {American Association for the Advancement of Science},
+	Title = {Judgment under uncertainty: Heuristics and biases},
+	Volume = {185},
+	Year = {1974}}
 
 @article{Gigerenzer1995,
-  title={How to improve Bayesian reasoning without instruction: Frequency formats.},
-  author={Gigerenzer, Gerd and Hoffrage, Ulrich},
-  journal={Psychological Review},
-  volume={102},
-  number={4},
-  pages={684},
-  year={1995},
-  publisher={American Psychological Association}
-}
+	Author = {Gigerenzer, Gerd and Hoffrage, Ulrich},
+	Journal = {Psychological Review},
+	Number = {4},
+	Pages = {684},
+	Publisher = {American Psychological Association},
+	Title = {How to improve Bayesian reasoning without instruction: Frequency formats.},
+	Volume = {102},
+	Year = {1995}}
 
 @article{Krynski2007,
-  title={The role of causality in judgment under uncertainty.},
-  author={Krynski, Tevye R and Tenenbaum, Joshua B},
-  journal={Journal of Experimental Psychology: General},
-  volume={136},
-  number={3},
-  pages={430},
-  year={2007},
-  publisher={American Psychological Association}
-}
+	Author = {Krynski, Tevye R and Tenenbaum, Joshua B},
+	Journal = {Journal of Experimental Psychology: General},
+	Number = {3},
+	Pages = {430},
+	Publisher = {American Psychological Association},
+	Title = {The role of causality in judgment under uncertainty.},
+	Volume = {136},
+	Year = {2007}}
 
 @book{Pearl1988,
-  title={Probabilistic reasoning in intelligent systems: networks of plausible inference},
-  author={Pearl, Judea},
-  year={1988},
-  publisher={Morgan Kaufmann}
-}
+	Author = {Pearl, Judea},
+	Publisher = {Morgan Kaufmann},
+	Title = {Probabilistic reasoning in intelligent systems: networks of plausible inference},
+	Year = {1988}}
 
 @article{Gopnik2000,
-  title={Detecting blickets: How young children use information about novel causal powers in categorization and induction},
-  author={Gopnik, Alison and Sobel, David M},
-  journal={Child Development},
-  volume={71},
-  number={5},
-  pages={1205--1222},
-  year={2000},
-  publisher={Wiley Online Library}
-}
+	Author = {Gopnik, Alison and Sobel, David M},
+	Journal = {Child Development},
+	Number = {5},
+	Pages = {1205--1222},
+	Publisher = {Wiley Online Library},
+	Title = {Detecting blickets: How young children use information about novel causal powers in categorization and induction},
+	Volume = {71},
+	Year = {2000}}
 
 @article{Sobel2004,
-  title={Children's causal inferences from indirect evidence: Backwards blocking and Bayesian reasoning in preschoolers},
-  author={Sobel, David M and Tenenbaum, Joshua B and Gopnik, Alison},
-  journal={Cognitive Science},
-  volume={28},
-  number={3},
-  pages={303--333},
-  year={2004},
-  publisher={Elsevier}
-}
+	Author = {Sobel, David M and Tenenbaum, Joshua B and Gopnik, Alison},
+	Journal = {Cognitive Science},
+	Number = {3},
+	Pages = {303--333},
+	Publisher = {Elsevier},
+	Title = {Children's causal inferences from indirect evidence: Backwards blocking and Bayesian reasoning in preschoolers},
+	Volume = {28},
+	Year = {2004}}
 
 @article{Kelley1973,
-  title={The processes of causal attribution.},
-  author={Kelley, Harold H},
-  journal={American Psychologist},
-  volume={28},
-  number={2},
-  pages={107},
-  year={1973},
-  publisher={American Psychological Association}
-}
+	Author = {Kelley, Harold H},
+	Journal = {American Psychologist},
+	Number = {2},
+	Pages = {107},
+	Publisher = {American Psychological Association},
+	Title = {The processes of causal attribution.},
+	Volume = {28},
+	Year = {1973}}
 
 @article{Ross1977,
-  title={The intuitive psychologist and his shortcomings: Distortions in the attribution process},
-  author={Ross, Lee},
-  journal={Advances in Experimental Social Psychology},
-  volume={10},
-  pages={173--220},
-  year={1977}
-}
+	Author = {Ross, Lee},
+	Journal = {Advances in Experimental Social Psychology},
+	Pages = {173--220},
+	Title = {The intuitive psychologist and his shortcomings: Distortions in the attribution process},
+	Volume = {10},
+	Year = {1977}}
 
 @inproceedings{Griffiths2001,
-  title={Randomness and coincidences: Reconciling intuition and probability theory},
-  author={Griffiths, Thomas L and Tenenbaum, Joshua B},
-  booktitle={Proceedings of the 23rd Annual Conference of the Cognitive Science Society},
-  pages={370--375},
-  year={2001},
-  url = {http://web.mit.edu/cocosci/Papers/random.pdf}
-}
+	Author = {Griffiths, Thomas L and Tenenbaum, Joshua B},
+	Booktitle = {Proceedings of the 23rd Annual Conference of the Cognitive Science Society},
+	Pages = {370--375},
+	Title = {Randomness and coincidences: Reconciling intuition and probability theory},
+	Url = {http://web.mit.edu/cocosci/Papers/random.pdf},
+	Year = {2001},
+	Bdsk-Url-1 = {http://web.mit.edu/cocosci/Papers/random.pdf}}
 
 @article{Goodfellow1938,
-  title={A psychological interpretation of the results of the Zenith radio experiments in telepathy.},
-  author={Goodfellow, Louis D},
-  journal={Journal of Experimental Psychology},
-  volume={23},
-  number={6},
-  pages={601},
-  year={1938},
-  publisher={American Psychological Association}
-}
-
+	Author = {Goodfellow, Louis D},
+	Journal = {Journal of Experimental Psychology},
+	Number = {6},
+	Pages = {601},
+	Publisher = {American Psychological Association},
+	Title = {A psychological interpretation of the results of the Zenith radio experiments in telepathy.},
+	Volume = {23},
+	Year = {1938}}
 
 @article{Goodman:2009uy,
-author = {Goodman, N D and Baker, C.L. and Tenenbaum, J B},
-title = {Cause and intent: Social reasoning in causal learning},
-journal = {Proceedings of the 31st Annual Meeting of the Cognitive Science Society},
-year = {2009}
-}
+	Author = {Goodman, N D and Baker, C.L. and Tenenbaum, J B},
+	Journal = {Proceedings of the 31st Annual Meeting of the Cognitive Science Society},
+	Title = {Cause and intent: Social reasoning in causal learning},
+	Year = {2009}}
 
 @book{Dennett:1989wh,
-author = {Dennett, Daniel Clement},
-title = {The Intentional Stance},
-publisher = {MIT Press},
-year = {1989},
-month = jan
-}
+	Author = {Dennett, Daniel Clement},
+	Month = jan,
+	Publisher = {MIT Press},
+	Title = {The Intentional Stance},
+	Year = {1989}}
 
 @article{Shafto:2012by,
-author = {Shafto, P and Goodman, N D and Frank, M C},
-title = {Learning From Others: The Consequences of Psychological Reasoning for Human Learning},
-journal = {Perspectives on Psychological Science},
-year = {2012},
-volume = {7},
-number = {4},
-pages = {341--351},
-month = jun
-}
+	Author = {Shafto, P and Goodman, N D and Frank, M C},
+	Journal = {Perspectives on Psychological Science},
+	Month = jun,
+	Number = {4},
+	Pages = {341--351},
+	Title = {Learning From Others: The Consequences of Psychological Reasoning for Human Learning},
+	Volume = {7},
+	Year = {2012}}
 
 @article{Baker:2009ti,
-author = {Baker, Chris L and Saxe, Rebecca and Tenenbaum, Joshua B},
-title = {Action understanding as inverse planning},
-journal = {Cognition},
-year = {2009},
-volume = {113},
-number = {3},
-pages = {329--349}
-}
+	Author = {Baker, Chris L and Saxe, Rebecca and Tenenbaum, Joshua B},
+	Journal = {Cognition},
+	Number = {3},
+	Pages = {329--349},
+	Title = {Action understanding as inverse planning},
+	Volume = {113},
+	Year = {2009}}
 
 @article{Kushnir:2010wx,
-author = {Kushnir, T and Xu, F and Wellman, H M},
-title = {Young Children Use Statistical Sampling to Infer the Preferences of Other People},
-journal = {Psychological Science},
-year = {2010},
-volume = {21},
-number = {8},
-pages = {1134--1140}
-}
+	Author = {Kushnir, T and Xu, F and Wellman, H M},
+	Journal = {Psychological Science},
+	Number = {8},
+	Pages = {1134--1140},
+	Title = {Young Children Use Statistical Sampling to Infer the Preferences of Other People},
+	Volume = {21},
+	Year = {2010}}
 
 @article{Smith2002,
-author = {Smith, L.B. and Jones, S.S. and Landau, B. and Gershkoff-Stowe, L. and Samuelson, L.},
-title = {Object name learning provides on-the-job training for attention},
-journal = {Psychological Science},
-year = {2002},
-volume = {13},
-number = {1},
-pages = {13--19}
-}
+	Author = {Smith, L.B. and Jones, S.S. and Landau, B. and Gershkoff-Stowe, L. and Samuelson, L.},
+	Journal = {Psychological Science},
+	Number = {1},
+	Pages = {13--19},
+	Title = {Object name learning provides on-the-job training for attention},
+	Volume = {13},
+	Year = {2002}}
 
 @article{Nisbett1983,
-author = {Nisbett, Richard E and Krantz, David H and Jepson, Christopher and Kunda, Ziva},
-title = {The use of statistical heuristics in everyday inductive reasoning.},
-journal = {Psychological Review},
-year = {1983},
-volume = {90},
-number = {4},
-pages = {339},
-month = oct
-}
+	Author = {Nisbett, Richard E and Krantz, David H and Jepson, Christopher and Kunda, Ziva},
+	Journal = {Psychological Review},
+	Month = oct,
+	Number = {4},
+	Pages = {339},
+	Title = {The use of statistical heuristics in everyday inductive reasoning.},
+	Volume = {90},
+	Year = {1983}}
 
 @techreport{Salakhutdinov2010,
-author = {Salakhutdinov, Ruslan and Tenenbaum, Josh and Torralba, Antonio},
-title = {One-shot learning with a hierarchical nonparametric Bayesian model},
-year = {2010}
-}
+	Author = {Salakhutdinov, Ruslan and Tenenbaum, Josh and Torralba, Antonio},
+	Title = {One-shot learning with a hierarchical nonparametric Bayesian model},
+	Year = {2010}}
 
 @incollection{Chomsky1970,
-author = {Chomsky, Noam},
-title = {Remarks on Nominalization},
-booktitle = {Readings in English Transformational Grammar},
-year = {1970},
-editor = {Jacobs, Roderick A and Rosenbaum, Peter S},
-pages = {184--221},
-publisher = {Ginn},
-address = {Waltham, Mass}
-}
-
+	Address = {Waltham, Mass},
+	Author = {Chomsky, Noam},
+	Booktitle = {Readings in English Transformational Grammar},
+	Editor = {Jacobs, Roderick A and Rosenbaum, Peter S},
+	Pages = {184--221},
+	Publisher = {Ginn},
+	Title = {Remarks on Nominalization},
+	Year = {1970}}
 
 @book{Jackendoff1981,
-author = {Jackendoff, Ray S},
-title = {X' Syntax: A Study of Phrase Structure},
-publisher = {MIT Press},
-year = {1981},
-series = {Linguistic inquiry monographs}
-}
+	Author = {Jackendoff, Ray S},
+	Publisher = {MIT Press},
+	Series = {Linguistic inquiry monographs},
+	Title = {X' Syntax: A Study of Phrase Structure},
+	Year = {1981}}
 
 @article{Tenenbaum2001,
-author = {Tenenbaum, Joshua B and Griffiths, Thomas L},
-title = {Generalization, similarity, and Bayesian inference},
-journal = {Behavioral and Brain Sciences},
-year = {2001},
-volume = {24},
-number = {4},
-pages = {629--640},
-month = aug
-}
+	Author = {Tenenbaum, Joshua B and Griffiths, Thomas L},
+	Journal = {Behavioral and Brain Sciences},
+	Month = aug,
+	Number = {4},
+	Pages = {629--640},
+	Title = {Generalization, similarity, and Bayesian inference},
+	Volume = {24},
+	Year = {2001}}
 
 @article{Spelke2010,
-author = {Spelke, Elizabeth S},
-title = {Principles of Object Perception},
-journal = {Cognitive Science},
-year = {2010},
-volume = {14},
-number = {1},
-pages = {29--56},
-month = feb
-}
+	Author = {Spelke, Elizabeth S},
+	Journal = {Cognitive Science},
+	Month = feb,
+	Number = {1},
+	Pages = {29--56},
+	Title = {Principles of Object Perception},
+	Volume = {14},
+	Year = {2010}}
 
 @article{Griffiths2005,
-author = {Griffiths, TL and Tenenbaum, Joshua B},
-title = {Structure and strength in causal induction},
-journal = {Cognitive Psychology},
-year = {2005},
-volume = {51},
-number = {4},
-pages = {334--384}
-}
+	Author = {Griffiths, TL and Tenenbaum, Joshua B},
+	Journal = {Cognitive Psychology},
+	Number = {4},
+	Pages = {334--384},
+	Title = {Structure and strength in causal induction},
+	Volume = {51},
+	Year = {2005}}
 
 @article{Tenenbaum2000,
-author = {Tenenbaum, Joshua B},
-title = {Rules and similarity in concept learning},
-journal = {Advances in Neural Information Processing Systems},
-year = {2000},
-volume = {12},
-pages = {59--65}
-}
+	Author = {Tenenbaum, Joshua B},
+	Journal = {Advances in Neural Information Processing Systems},
+	Pages = {59--65},
+	Title = {Rules and similarity in concept learning},
+	Volume = {12},
+	Year = {2000}}
 
 @article{Griffiths2009,
-author = {Griffiths, T.L. and Tenenbaum, Joshua B},
-title = {Theory-Based Causal Induction},
-journal = {Psychological Review},
-year = {2009},
-volume = {116},
-number = {4},
-pages = {661--716}
-}
+	Author = {Griffiths, T.L. and Tenenbaum, Joshua B},
+	Journal = {Psychological Review},
+	Number = {4},
+	Pages = {661--716},
+	Title = {Theory-Based Causal Induction},
+	Volume = {116},
+	Year = {2009}}
 
 @article{Feldman2009,
-  title={The influence of categories on perception: explaining the perceptual magnet effect as optimal statistical inference.},
-  author={Feldman, Naomi H and Griffiths, Thomas L and Morgan, James L},
-  journal={Psychological review},
-  volume={116},
-  number={4},
-  pages={752},
-  year={2009},
-  publisher={American Psychological Association}
-}
+	Author = {Feldman, Naomi H and Griffiths, Thomas L and Morgan, James L},
+	Journal = {Psychological review},
+	Number = {4},
+	Pages = {752},
+	Publisher = {American Psychological Association},
+	Title = {The influence of categories on perception: explaining the perceptual magnet effect as optimal statistical inference.},
+	Volume = {116},
+	Year = {2009}}
